fix footer being positioned too high when content is short

--- a/styles/body.css
+++ b/styles/body.css
@@ -28,7 +28,6 @@
             border: none;
             border-radius: 2rem;
             padding: 0 2rem 1rem 2rem;
-            margin: 0 0 1rem 0;
 
             @media screen and (max-width: 1100px) {
                 width: 90%;
